# garo-vibe-backend

./: .dockerignore  .gitignore  manual_garo_protocol.md  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml  Cargo.toml
anchor/programs/garo_vibe/: Cargo.toml
anchor/programs/garo_vibe/src/: lib.rs
anchor/tests/: garo_vibe.ts
legacy-backend/: Dockerfile  THE_GARO_EXPERIENCE.md  doctrina_garo.md  metadata.json  package-lock.json  tsconfig.json
legacy-backend/public/: dashboard.html  onboarding.html
legacy-backend/src/: check-supabase.ts  conectar-red.ts  crear-arbol.ts  debug-tree.ts  events.json  mintear-nft.ts  mostrar-address.ts  supabase_schema.sql  ver-direccion.ts
public/: Untitled-1.txt  admin.html  dashboard.html  downloads.html  gallery.html  godmode.html  i18n.js  index.html  inject.html  leaderboard.html  manifest.json  onboarding.html  profile.html  qr-code.html  scanner.html  story.html  styles.css  tickets.html
scripts/: batch-evolve.ts  evolve-nft.ts
src/: events.json  generar-wallet.ts  server.ts  setup-cuenta.ts
web/: .gitignore  next.config.ts  package-lock.json  package.json
web/docs/: DOCTRINA_GARO.md
web/public/: manifest.json
web/scripts/: check-balance.js  debug-key.js  gen-save-wallet.js  generate-wallet.js  repair-key.js  setup-env.js  verify-mint.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/content/: legal.ts
web/src/context/: LanguageProvider.tsx  VibeContext.tsx  translations.ts
web/src/lib/: dynamicNft.ts  solanaAdmin.ts  supabaseClient.ts
(+75 files in other folders)
