[package]
name = "garo-vibe"
version = "0.1.0"
description = "GΛRO VIBE - Proof of Rave Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "garo_vibe"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
